[package]
name = "dassign"
version = "0.1.0"
authors = ["Sandeep Datta <datta.sandeep@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = ""
description = "Simple destructuring assignments."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
